FIX : cloudbees deployment